[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameUI/Menus/SubMenus/ConfirmMessage/confirm_message_landing.gd" type="Script" id=1]
[ext_resource path="res://GameUI/MenuElements/resources/dudelings_ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://GameUI/MenuElements/ButtonElement.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_backdrop_stylebox.tres" type="StyleBox" id=4]
[ext_resource path="res://GameUI/Menus/SubMenus/sub_menu_background_panel.gd" type="Script" id=5]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_background_panel_stylebox.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/GameUI/fonts/custom/large_font.res" type="BitmapFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.0470588, 0.301961, 1 )
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="ConfirmMessageLanding" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 1 )

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 400 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 5 )

[node name="ColorPanel" type="Panel" parent="BackgroundPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -314.0
margin_top = -106.0
margin_right = 314.0
margin_bottom = 14.0
grow_horizontal = 2
rect_min_size = Vector2( 628, 120 )
custom_styles/panel = SubResource( 1 )

[node name="HeaderLabel" type="Label" parent="BackgroundPanel"]
margin_right = 600.0
margin_bottom = 50.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "HEADER LABEL"
align = 1
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="BackgroundPanel"]
margin_top = 60.0
margin_right = 600.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 170 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Text[/center]"
text = "Text"

[node name="ElementContainer" type="HBoxContainer" parent="BackgroundPanel"]
margin_top = 304.0
margin_right = 600.0
margin_bottom = 404.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 80
alignment = 1

[node name="CancelButtonElement" parent="BackgroundPanel/ElementContainer" instance=ExtResource( 3 )]
margin_left = 80.0
margin_top = 10.0
margin_right = 260.0
margin_bottom = 90.0
rect_min_size = Vector2( 180, 80 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../ConfirmButtonElement")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../ConfirmButtonElement")
focus_previous = NodePath(".")
theme = ExtResource( 2 )
text = "CANCEL"
align = 1

[node name="ConfirmButtonElement" parent="BackgroundPanel/ElementContainer" instance=ExtResource( 3 )]
margin_left = 340.0
margin_top = 10.0
margin_right = 520.0
margin_bottom = 90.0
rect_min_size = Vector2( 180, 80 )
focus_neighbour_left = NodePath("../CancelButtonElement")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../CancelButtonElement")
theme = ExtResource( 2 )
text = "CONFIRM"
align = 1
